WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
100741
[AC] Fix compilation warnings when enabling Accelerated Compositing
https://bugs.webkit.org/show_bug.cgi?id=100741
Summary
[AC] Fix compilation warnings when enabling Accelerated Compositing
Chris Dumez
Reported
2012-10-30 03:51:00 PDT
We get the following compilation warnings on EFL port when enabling Accelerated Compositing: /home/chris/Devel/WebKit/Source/WebCore/platform/graphics/texmap/TextureMapperGL.cpp: In member function 'virtual void WebCore::BitmapTextureGL::updateContents(const void*, const WebCore::IntRect&, const WebCore::IntPoint&, int, WebCore::BitmapTexture::UpdateContentsFlag)': /home/chris/Devel/WebKit/Source/WebCore/platform/graphics/texmap/TextureMapperGL.cpp:669:46: warning: comparison between signed and unsigned integer expressions [-Wsign-compare] /home/chris/Devel/WebKit/Source/WebCore/platform/graphics/surfaces/qt/GraphicsSurfaceGLX.cpp:122:5: warning: unused parameter ‘shareContext’ [-Wunused-parameter] /home/chris/Devel/WebKit/Source/WebCore/platform/graphics/surfaces/qt/GraphicsSurfaceGLX.cpp:322:13: warning: unused parameter ‘p’ [-Wunused-parameter] /home/chris/Devel/WebKit/Source/WebCore/platform/graphics/surfaces/qt/GraphicsSurfaceGLX.cpp:360:6: warning: unused parameter ‘target’ [-Wunused-parameter] /home/chris/Devel/WebKit/Source/WebCore/platform/graphics/surfaces/qt/GraphicsSurfaceGLX.cpp:360:6: warning: unused parameter ‘id’ [-Wunused-parameter] /home/chris/Devel/WebKit/Source/WebCore/platform/graphics/surfaces/qt/GraphicsSurfaceGLX.cpp:360:6: warning: unused parameter ‘targetRect’ [-Wunused-parameter] /home/chris/Devel/WebKit/Source/WebCore/platform/graphics/surfaces/qt/GraphicsSurfaceGLX.cpp:360:6: warning: unused parameter ‘offset’ [-Wunused-parameter] /home/chris/Devel/WebKit/Source/WebCore/platform/graphics/surfaces/qt/GraphicsSurfaceGLX.cpp:430:7: warning: unused parameter ‘rect’ [-Wunused-parameter] /home/chris/Devel/WebKit/Source/WebCore/platform/graphics/surfaces/qt/GraphicsSurfaceGLX.cpp:430:7: warning: unused parameter ‘outputStride’ [-Wunused-parameter] /home/chris/Devel/WebKit/Source/WebCore/platform/graphics/surfaces/qt/GraphicsSurfaceGLX.cpp:430:7: warning: unused parameter ‘lockOptions’ [-Wunused-parameter]
Attachments
Patch
(3.66 KB, patch)
2012-10-30 03:53 PDT
,
Chris Dumez
kenneth
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(3.71 KB, patch)
2012-10-30 07:05 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-10-30 03:53:52 PDT
Created
attachment 171411
[details]
Patch
Chris Dumez
Comment 2
2012-10-30 03:55:05 PDT
BTW, we should probably move Source/WebCore/platform/graphics/surfaces/qt/GraphicsSurfaceGLX.cpp to another folder because it looks really weird for the EFL port to build files from a Qt folder.
WebKit Review Bot
Comment 3
2012-10-30 05:30:06 PDT
Comment on
attachment 171411
[details]
Patch Rejecting
attachment 171411
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: t/git/webkit-commit-queue/Source/WebKit/chromium/v8 --revision 12787 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' 50>At revision 12787. ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output:
http://queues.webkit.org/results/14627522
Chris Dumez
Comment 4
2012-10-30 07:05:10 PDT
Created
attachment 171444
[details]
Patch for landing Rebased on master. Could someone please cq+?
WebKit Review Bot
Comment 5
2012-10-30 08:45:55 PDT
Comment on
attachment 171444
[details]
Patch for landing Clearing flags on attachment: 171444 Committed
r132911
: <
http://trac.webkit.org/changeset/132911
>
WebKit Review Bot
Comment 6
2012-10-30 08:45:58 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug