[AC] Fix compilation warnings when enabling Accelerated Compositing https://bugs.webkit.org/show_bug.cgi?id=100741

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-10-30
Reviewed by Kenneth Rohde Christiansen.

Fix a few compilation warnings when building EFL port
with accelerated compositing enabled.

No new tests, no behavior change.

* platform/graphics/surfaces/qt/GraphicsSurfaceGLX.cpp:
(WebCore::GraphicsSurfacePrivate::GraphicsSurfacePrivate):
(WebCore::resolveGLMethods):
(WebCore::GraphicsSurface::platformCopyToGLTexture):
(WebCore::GraphicsSurface::platformLock):
* platform/graphics/texmap/TextureMapperGL.cpp:
(WebCore::BitmapTextureGL::updateContents):

Canonical link: https://commits.webkit.org/118795@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132911 268f45cc-cd09-0410-ab3c-d52691b4dbfc